--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -1364,6 +1364,7 @@ bg:
       payment_details_add_error: ~
       listing_author_payment_details_missing: "Моля, свържете се с автора като натиснете бутона 'Свържи се'. Необходимо е да си настроят профила за приемане на плащания."
       stylesheet_needs_recompiling: ~
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: ~
       notifications: ~
