--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1404,6 +1404,7 @@ cs:
       payment_details_add_error: "Platební údaje nemohly být přidány"
       listing_author_payment_details_missing: "Prosíme, kontaktujte autora kliknutím na tlačítko \"Kontaktovat\" níže. Je totiž zapotřebí aktualizovat podrobnosti o platbě, aby platba mohla být přijata."
       stylesheet_needs_recompiling: "Šablony se právě přetvářejí. Prosíme, aktualizujte stránku po chvíli."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Účet
       notifications: Upozornění
