--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -1391,6 +1391,7 @@ da-DK:
       payment_details_add_error: "Vi kunne ikke tilføje dine betalingsoplysninger"
       listing_author_payment_details_missing: "Kontakt sælger ved at trykke på knappen \"Kontakt\" nedenfor. De skal opdatere deres betalingsoplysninger for at kunne modtage betalinger."
       stylesheet_needs_recompiling: "Stylesheet er ved at blive genoversat. Genindlæs venligst siden om lidt."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Konto
       notifications: Notifikationer
