--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1399,6 +1399,7 @@ de:
         zero: "Die Webseite geht nun offline für Wartungsarbeiten."
         one: "Die Webseite geht offline für Wartungsarbeiten in %{count} Minute."
         other: "Die Webseite geht offline für Wartungsarbeiten in %{count} Minuten."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Konto
       notifications: Benachrichtigungen
