--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1372,6 +1372,7 @@ it:
         zero: "Il sito web sarà messo ora offline per manutenzione."
         one: "Il sito web sarà offline per manutenzione per %{count} minuto."
         other: "Il sito web sarà offline per %{count} minuti."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Account
       notifications: Notifiche
