--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1378,6 +1378,7 @@ ja:
       payment_details_add_error: お支払い情報を追加できませんでした
       listing_author_payment_details_missing: このリストの作成者はお支払い詳細を追加していないので、現在のところお支払いを受け取れません。このリストの作者に直接連絡を取ってください。作成者
       stylesheet_needs_recompiling: スタイルシートをコンパイルしています。しばらくしてからページをリロードしてください。
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: ご登録情報
       notifications: メール通知
