--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1395,6 +1395,7 @@ pt-BR:
         zero: "O site sairá do ar agora para manutenção"
         one: "O site sairá do ar para manutenção em %{count} minuto"
         other: "O site sairá do ar para manutenção em %{count} minutos"
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Conta
       notifications: Notificações
