--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -1397,6 +1397,7 @@ sv:
       payment_details_add_error: "Det gick inte att lägga till betalningsdetaljer"
       listing_author_payment_details_missing: "Vänligen kontakta ägaren genom att klicka på \"Kontakt\" nedan. De måste uppdatera sina betalningsdetaljer för att kunna ta emot betalning."
       stylesheet_needs_recompiling: "Formatmallen kompilerar. Vänligen ladda om sidan efter ett tag."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Konto
       notifications: Aviseringar
