--- a/config/locales/tr-TR.yml
+++ b/config/locales/tr-TR.yml
@@ -1380,6 +1380,7 @@ tr-TR:
       payment_details_add_error: "Ödeme bilgileri eklenemedi"
       listing_author_payment_details_missing: "Bu listelemenin sahibi ödeme bilgilerini eklemediği için şu an ödeme alamıyor. Lütfen ilan sahibine veya bize ulaşın."
       stylesheet_needs_recompiling: "Site görünümü hazırlanıyor. Lütfen birazdan sayfayı tekrar yükleyiniz..."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Hesap
       notifications: Bildirimler
