--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1364,6 +1364,7 @@ vi:
       payment_details_add_error: ~
       listing_author_payment_details_missing: ~
       stylesheet_needs_recompiling: ~
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: "Tài khoản"
       notifications: "Các ghi chú"
