--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1384,6 +1384,7 @@ zh-TW:
       payment_details_add_error: 无法添加支付信息
       listing_author_payment_details_missing: 请点击下面的‘联系’按钮联系卖家。他们需要更新付款信息来接收付款。
       stylesheet_needs_recompiling: 样式表正在重新编译。请过一会重新加载页面。
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: 帐号
       notifications: 通知
