--- a/config/locales/eu-ES.yml
+++ b/config/locales/eu-ES.yml
@@ -1364,6 +1364,7 @@ eu-ES:
       payment_details_add_error: ~
       listing_author_payment_details_missing: ~
       stylesheet_needs_recompiling: ~
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: ~
       notifications: ~
