--- a/config/locales/fr-CA.yml
+++ b/config/locales/fr-CA.yml
@@ -1383,6 +1383,7 @@ fr-CA:
       payment_details_add_error: "Impossible d'ajouter les détails de paiement"
       listing_author_payment_details_missing: "L'auteur de cette annonce n'a pas ajouté ses détails de paiement et ne peut pas recevoir de paiement actuellement. Merci de contacter l'auteur de l'annonce."
       stylesheet_needs_recompiling: "La feuille de style est en cours de traitement. Veuillez recharger cette page dans quelques instants."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Compte
       notifications: Notifications
