--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -1366,6 +1366,7 @@ id:
       payment_details_add_error: ~
       listing_author_payment_details_missing: ~
       stylesheet_needs_recompiling: ~
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Akun
       notifications: Notifikasi
