--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -405,6 +405,7 @@ en:
       emails_title: Emails
       support: Support
       subscription: Subscription
+      preview: "Preview my site"
     listing_shapes:
       index:
         listing_shapes: "Order types"
