--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -405,6 +405,7 @@ de:
       emails_title: E-Mails
       support: Support
       subscription: Abonnement
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: Auftragsarten
