--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -405,6 +405,7 @@ nb:
       emails_title: E-poster
       support: Support
       subscription: Påmelding
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: Annonsetype
