--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -405,6 +405,7 @@ pt-BR:
       emails_title: E-mails
       support: Suporte
       subscription: Assinatura
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: "Pedidos por tipos"
