--- a/config/locales/tr-TR.yml
+++ b/config/locales/tr-TR.yml
@@ -400,6 +400,7 @@ tr-TR:
       emails_title: E-postalar
       support: Destek
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
