--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -400,6 +400,7 @@ zh-TW:
       emails_title: 电邮
       support: 支持
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: 交易类型
