--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -390,6 +390,7 @@ bg:
       emails_title: ~
       support: ~
       subscription: Aбонамент
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
