--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -390,6 +390,7 @@ ca:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
