--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -410,6 +410,7 @@ cs:
       emails_title: Emaily
       support: "Zákaznická podpora"
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: "Typy objednávek"
