--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -405,6 +405,7 @@ da-DK:
       emails_title: Emails
       support: support
       subscription: Abonnement
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: "Ordre typer"
