--- a/config/locales/en-NZ.yml
+++ b/config/locales/en-NZ.yml
@@ -390,6 +390,7 @@ en-NZ:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
