--- a/config/locales/fr-CA.yml
+++ b/config/locales/fr-CA.yml
@@ -405,6 +405,7 @@ fr-CA:
       emails_title: Emails
       support: Support
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
