--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -390,6 +390,7 @@ hu:
       emails_title: Emailek
       support: Segítség
       subscription: Feliratkozás
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
