--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -390,6 +390,7 @@ it:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: "Tipo di ordini"
