--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -400,6 +400,7 @@ ja:
       emails_title: メールアドレス
       support: サポート
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
