--- a/config/locales/ms-MY.yml
+++ b/config/locales/ms-MY.yml
@@ -390,6 +390,7 @@ ms-MY:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
