--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -390,6 +390,7 @@ pt-PT:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
