--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -405,6 +405,7 @@ sv:
       emails_title: E-post
       support: Support
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: Ordertyper
