--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -390,6 +390,7 @@ uk:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
