--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -390,6 +390,7 @@ zh-HK:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
