--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -405,7 +405,7 @@ de:
       emails_title: E-Mails
       support: Support
       subscription: Abonnement
-      preview: ~
+      preview: "Vorschau meiner Seite anzeigen"
     listing_shapes:
       index:
         listing_shapes: Auftragsarten
@@ -1400,7 +1400,7 @@ de:
         zero: "Die Webseite geht nun offline für Wartungsarbeiten."
         one: "Die Webseite geht offline für Wartungsarbeiten in %{count} Minute."
         other: "Die Webseite geht offline für Wartungsarbeiten in %{count} Minuten."
-      automatically_logged_out_please_sign_in: ~
+      automatically_logged_out_please_sign_in: "Du wurdest automatisch ausgeloggt. Bitte melde Dich erneut an."
     settings:
       account: Konto
       notifications: Benachrichtigungen
