--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -390,6 +390,7 @@ el:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
@@ -1364,6 +1365,7 @@ el:
       payment_details_add_error: "Αποτυχία εισαγωγής στοιχείων πληρωμών"
       listing_author_payment_details_missing: ~
       stylesheet_needs_recompiling: ~
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Λογαριασμός
       notifications: Ειδοποιήσεις
