--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -405,6 +405,7 @@ nl:
       emails_title: E-mails
       support: Support
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
@@ -1379,6 +1380,7 @@ nl:
       payment_details_add_error: "Kon betalingsgegevens niet toevoegen"
       listing_author_payment_details_missing: "De persoon die het item heeft geplaatst heeft zijn betalingsgegevens nog niet ingevuld en kan daardoor nog geen betalingen ontvangen. Contacteer de verkoper a.u.b."
       stylesheet_needs_recompiling: "De pagina met stijlinstellingen wordt bijgewerkt. Laad de pagina na enkele ogenblikken opnieuw."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Account
       notifications: Notificaties
