--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -390,6 +390,7 @@ es:
       emails_title: ~
       support: ~
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
@@ -1371,6 +1372,7 @@ es:
       payment_details_add_error: ~
       listing_author_payment_details_missing: ~
       stylesheet_needs_recompiling: ~
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: Cuenta
       notifications: Notificaciones
