Changes to translation keys

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -405,7 +405,7 @@ en:
       emails_title: Emails
       support: Support
       subscription: Subscription
-      preview: "Preview my site"
+      preview: "Preview site"
     listing_shapes:
       index:
         listing_shapes: "Order types"
@@ -1400,7 +1400,7 @@ en:
         zero: "The website will now go offline for maintenance"
         one: "The website will be offline for maintenance in %{count} minute"
         other: "The website will be offline for maintenance in %{count} minutes"
-      automatically_logged_out_please_sign_in: "You have been automatically logged out. Please sign in again."
+      automatically_logged_out_please_sign_in: "You have been automatically logged out. Please log in again."
     settings:
       account: Account
       notifications: Notifications
