--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -415,6 +415,7 @@ ru:
       emails_title: Emails
       support: Поддержка
       subscription: ~
+      preview: ~
     listing_shapes:
       index:
         listing_shapes: ~
@@ -1389,6 +1390,7 @@ ru:
       payment_details_add_error: "Платежная информация не добавлена"
       listing_author_payment_details_missing: "Создатель предложения не добавил детали оплаты поэтому они не получат оплату прямо сейчас. Пожалуйста свяжитесь с создателем предложения."
       stylesheet_needs_recompiling: "Таблица стилей перестроена. Пожалуйста, перезагрузите страницу."
+      automatically_logged_out_please_sign_in: ~
     settings:
       account: "Учётная запись"
       notifications: Оповещения
