--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1293,6 +1293,7 @@ de:
       confirmation_link_is_wrong_or_used: "Der Bestätigungslink wurde bereits verwendet oder ist anderweitig defekt. Versuche, dich anzumelden oder sende ein Feedback, sofern das Problem weiterhin besteht."
       additional_email_confirmed: "Die eingegebene E-Mail-Adresse ist nun bestätigt."
       could_not_get_email_from_facebook: "Konnte keine E-Mail-Adresse von Facebook bekommen. Eine Accounterstellung ohne E-Mail-Adresse ist nicht möglich."
+      facebook_email_unconfirmed: ~
       create_new_listing: "Einen weiteren Eintrag erstellen"
       create_one_here: "hier ein neues Konto erstellen"
       email_confirmation_sent_to_new_address: "E-Mail-Bestätigung wird nun an die neue Adresse gesendet."
