--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1276,6 +1276,7 @@ ja:
       confirmation_link_is_wrong_or_used: 認証リンクがすでに使用されていたか、壊れていたようです。ログインを試してみて、問題が解決しない場合はサイト管理者にお問い合わせください。
       additional_email_confirmed: 入力したメールアドレスは承認されました。
       could_not_get_email_from_facebook: Facebookからメールアドレスを取得出来ませんでした。メールアドレスなしでアカウント作成が出来ません
+      facebook_email_unconfirmed: ~
       create_new_listing: もうひとつリストを作成する
       create_one_here: ここから作成
       email_confirmation_sent_to_new_address: 新しいメールアドレスへ認証メールを送りました。
