--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -1262,6 +1262,7 @@ zh-HK:
       confirmation_link_is_wrong_or_used: ~
       additional_email_confirmed: ~
       could_not_get_email_from_facebook: ~
+      facebook_email_unconfirmed: ~
       create_new_listing: ~
       create_one_here: 在這裡建立一個
       email_confirmation_sent_to_new_address: ~
