--- a/config/locales/ab.yml
+++ b/config/locales/ab.yml
@@ -1262,6 +1262,7 @@ ab:
       confirmation_link_is_wrong_or_used: ~
       additional_email_confirmed: ~
       could_not_get_email_from_facebook: ~
+      facebook_email_unconfirmed: ~
       create_new_listing: ~
       create_one_here: ~
       email_confirmation_sent_to_new_address: ~
