--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1269,6 +1269,7 @@ es:
       confirmation_link_is_wrong_or_used: "El link de confirmación ya ha sido usado o se ha roto en el enlace. Intenta iniciar sesión o escríbenos si el problema persiste."
       additional_email_confirmed: "El e-mail que ingresaste está confirmado. Puedes entrar a la comunidad ingresando nuevamente."
       could_not_get_email_from_facebook: "No pudimos acceder a tu dirección de email en Facebook. Sin ella no podemos crearte una cuenta en el sistema."
+      facebook_email_unconfirmed: ~
       create_new_listing: "Crear otro listado."
       create_one_here: "Crear una aquí"
       email_confirmation_sent_to_new_address: "El e-mail de confirmación ya fue enviado a la nueva dirección."
