--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -1262,6 +1262,7 @@ hu:
       confirmation_link_is_wrong_or_used: ~
       additional_email_confirmed: "A kért e-mail megerősítve"
       could_not_get_email_from_facebook: ~
+      facebook_email_unconfirmed: ~
       create_new_listing: "Adjon fel még egy hirdetést"
       create_one_here: "Hozzon létre egyet itt"
       email_confirmation_sent_to_new_address: "E-mail megerősítését elküldtük az új címre"
