--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -1264,6 +1264,7 @@ id:
       confirmation_link_is_wrong_or_used: "Link konfirmasi sudah digunakan atau rusak. Coba masuk kembali, atau tolong kirim pesan atau masukkan jika masalah terus berlanjut."
       additional_email_confirmed: ~
       could_not_get_email_from_facebook: ~
+      facebook_email_unconfirmed: ~
       create_new_listing: ~
       create_one_here: "Tambah satu disini"
       email_confirmation_sent_to_new_address: ~
