--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1266,6 +1266,7 @@ it:
       confirmation_link_is_wrong_or_used: "Il link di conferma è già stato utilizzato o altrimenti non funziona. Prova ad accedere nuovamente, o inviaci un'email se il problema persiste."
       additional_email_confirmed: "L'email specificata è ora confermata."
       could_not_get_email_from_facebook: "Non è possibile ricevere l'indirizzo email da Facebook, e non è possibile creare un account senza indirizzo email."
+      facebook_email_unconfirmed: ~
       create_new_listing: "Crea una nuova inserzione"
       create_one_here: "creane uno qui"
       email_confirmation_sent_to_new_address: "l'email di conferma è stata inviata al nuovo indirizzo email"
