--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -1277,6 +1277,7 @@ nl:
       confirmation_link_is_wrong_or_used: "De bevestigingslink is al gebruikt of is niet geldig. Probeer in te loggen en neem contact met ons op als het probleem zich blijft voordoen."
       additional_email_confirmed: "Het e-mail adres dat je hebt ingegeven is nu bevestigd."
       could_not_get_email_from_facebook: "Kon uw Facebook e-mail adres niet ophalen. Kan geen account aanmaken zonder e-mail adres."
+      facebook_email_unconfirmed: ~
       create_new_listing: "Een ander item aanmaken"
       create_one_here: "hier één maken"
       email_confirmation_sent_to_new_address: "E-mail bevestiging is nu gestuurd naar het nieuwe adres."
