--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -1295,6 +1295,7 @@ sv:
       confirmation_link_is_wrong_or_used: "Bekräftelselänken har redan används eller är trasig. Försök logga in eller skicka oss feedback om problemet kvarstår."
       additional_email_confirmed: "E-postadressen du skrev in är nu bekräftad."
       could_not_get_email_from_facebook: "Kunde inte hitta någon e-postadress från Facebook. Det går inte att skapa ett konto utan e-postadress."
+      facebook_email_unconfirmed: ~
       create_new_listing: "Skapa en ny annons"
       create_one_here: "skapa ett här"
       email_confirmation_sent_to_new_address: "E-postbekräftelse har nu skickats till den nya adressen."
