--- a/config/locales/tr-TR.yml
+++ b/config/locales/tr-TR.yml
@@ -1278,6 +1278,7 @@ tr-TR:
       confirmation_link_is_wrong_or_used: "Doğrulama linki kullanılmış ya da hatalı. Giriş yapmaya çalışın veya sorun devam ederse, bize ulaşın."
       additional_email_confirmed: "Girmiş olduğunuz e-posta adresi doğrulandı."
       could_not_get_email_from_facebook: "Facebook'tan e-posta adresinizi alamadık ve bu adres olmaksınız hesap oluşturulamıyor."
+      facebook_email_unconfirmed: ~
       create_new_listing: "Yeni listeleme oluştur"
       create_one_here: "burada bir tane oluştur"
       email_confirmation_sent_to_new_address: "E-posta doğrulamanız yeni adresinize gönderildi."
