--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1262,6 +1262,7 @@ vi:
       confirmation_link_is_wrong_or_used: "Liên kết xác nhận vừa được sử dụng hoặc bị hỏng. Thử đăng nhập lại, hoặc gửi thông tin phản hồi nếu lỗi vẫn tồn tại."
       additional_email_confirmed: "Thư điện tử bạn đã nhập bây giờ được xác nhận. Bây giờ, bạn có thể tham gia cộng đồng bằng cách nhập lại nó."
       could_not_get_email_from_facebook: "Tài khoảng Facebook không chứa địa chỉ mail. Bạn cần ít nhất 1 địa chỉ mail để tạo tài khoản trên trang này."
+      facebook_email_unconfirmed: ~
       create_new_listing: "Đăng một sản phẩm khác"
       create_one_here: "tạo một ở đây"
       email_confirmation_sent_to_new_address: "Bây giờ, email xác nhận được gửi đến địa chỉ mới."
