--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1282,6 +1282,7 @@ zh-TW:
       confirmation_link_is_wrong_or_used: 确认链接已使用或失效。请尝试登录，如果问题依然存在请发送反馈。
       additional_email_confirmed: 你输入的电子邮件已被确认。
       could_not_get_email_from_facebook: 不能从Facebook获取邮件地址，没有邮件地址则无法创建帐号。
+      facebook_email_unconfirmed: ~
       create_new_listing: 发布另一条消息
       create_one_here: 创建新用户
       email_confirmation_sent_to_new_address: 电子邮件确认信已经送往你的新地址。
