Button text for the finished state.

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -29,5 +29,5 @@ en:
         all_done:
           title: "Brilliant, you made it!"
           body: "Fantastic! You did it! Your marketplace is now up and running. However, this is just the start! You should continously update, improve and promote your marketplace. For some ideas on what to do next, check out <a href='https://www.sharetribe.com/academy/' target='_blank'>the Marketplace academy</a>."
-          button: ""
+          button: "Woohoo, I did it!"
         button_later: "I'll do it later, thanks"
