--- a/config/locales/devise.es-ES.yml
+++ b/config/locales/devise.es-ES.yml
@@ -22,7 +22,7 @@ es-ES:
       updated_not_active: "Tu contraseña ha sido cambiada exitosamente."
       send_paranoid_instructions: "Si tu email ya existe en nuestra base de datos, recibirás un enlace para recuperar tu contraseña en tu correo"
       send_instructions: "Recibirás un email con instrucciones para cambiar tu contraseña en poco minutos."
-      updated: "Tu contraseña ha sido modificada. Ya has accedido a tu cuenta."
+      updated: "Tu contraseña ha sido cambiada con éxito. Ahora estás conectado."
     sessions:
       signed_in: "Te has conectado correctamente."
       signed_out: "Has cerrado sesión correctamente."
