--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1293,7 +1293,7 @@ fr:
       confirmation_link_is_wrong_or_used: "Le lien de confirmation a déjà été utilisé ou est erroné. Essayez de vous connecter ou contactez-nous si le problème persiste."
       additional_email_confirmed: "Votre adresse email est désormais confirmée."
       could_not_get_email_from_facebook: "Impossible de récupérer l'adresse email depuis Facebook et impossible de créer un compte sans adresse email."
-      facebook_email_unconfirmed: ~
+      facebook_email_unconfirmed: "L'adresse email '%{email}' de votre compte Facebook est déjà utilisée mais n'est pas encore confirmée. Veuillez confirmer cette adresse email avant de vous connecter avec Facebook."
       create_new_listing: "Créer une autre annonce"
       create_one_here: "en créer un ici"
       email_confirmation_sent_to_new_address: "Un email de confirmation est envoyé à la nouvelle adresse."
