--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1001,6 +1001,8 @@ en:
       you_are_receiving_this_because: "You received this notification because you follow %{author_name}."
       view_listing: "View listing"
   error_messages:
+    onboarding:
+        server_rendering: "Getting started guide failed to load. We have been informed about the situation and we are fixing it."
     listings:
       departure_time: "Departure time must be between current time and one year from now."
       share_type: "You must select one."
